feat: deposit v2
